# vention-inverted-pendulum

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yaml
docs/: Design.md  Research.md  design-notes.md  todo.md
imgui/: CMakeLists.txt
include/: can.hpp  hmi.hpp  inverted_pendulum.hpp  network.hpp  pid.hpp  tcp.hpp  tools.hpp  typedefs.hpp
scripts/: build_compile.sh  install-dependencies.sh  launch-backend.sh  launch-hmi-v1  launch-hmi-v1.sh  launch-hmi-v2  launch-hmi-v2.sh  setup-build.sh
simulation/: CMakeLists.txt
simulation/include/: inverted_pendulum.hpp
src/: controller.cpp  hmi_v1.cpp  hmi_v2.cpp  inverted_pendulum.cpp  main.cpp  sim.cpp  tcp.cpp
test/: CMakeLists.txt  shm.cpp  tcp.cpp
utils/: CMakeLists.txt
utils/include/: network.hpp  pid.hpp
